[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Sprites/Other/Opening sequence/ship bg/2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Levels/Opening/OpeningScene3.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Other/Opening sequence/engine 1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Other/Opening sequence/engine 2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Other/Opening sequence/Ship.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Other/Opening sequence/ship bg/1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Other/Square.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/metroid_fusion_font__inline.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Fonts/metroid_fusion_font__outline.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets/Sprites/Other/Opening sequence/triangle/1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Other/Opening sequence/triangle/3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Other/Opening sequence/triangle/2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Other/Opening sequence/scanner bg.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 30.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "cockpit",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.1, 3.6, 5.4 ),
"transitions": PoolRealArray( 0.63728, 2.55, 0.64, 2.54912 ),
"update": 0,
"values": [ Vector2( 160, 115 ), Vector2( 160, 90 ), Vector2( 160, 90 ), Vector2( 160, 115 ) ]
}

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 9 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="Animation" id=7]
resource_name = "fade from black"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Black:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Black:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Black:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Black:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "fade to black"
tracks/0/type = "value"
tracks/0/path = NodePath("Black:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Black:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="OpeningScene3" type="Node2D"]
script = ExtResource( 2 )

[node name="BG" type="AnimatedSprite" parent="."]
position = Vector2( -24, 0 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
playing = true
centered = false

[node name="Ship" type="Sprite" parent="."]
position = Vector2( 160, 115 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Emission" type="AnimatedSprite" parent="Ship"]
modulate = Color( 1, 1, 1, 0.780392 )
show_behind_parent = true
scale = Vector2( 1.8, 1.8 )
frames = SubResource( 2 )
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ship"]
autoplay = "idle"
anims/idle = SubResource( 3 )

[node name="ReadabilityLayer" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0, 0, 0.235294 )
scale = Vector2( 20, 15 )
texture = ExtResource( 7 )
centered = false

[node name="Text" type="RichTextLabel" parent="."]
margin_left = 3.0
margin_top = 179.0
margin_right = 290.0
margin_bottom = 219.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "After narrowly escaping the station, I went into hiding with nothing but my weakened suit, ship, and the creatures that had brought that ship to my rescue during my escape. I was quickly forced to sell much of my equipment at a remote supply station in exchange for food and fuel."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outline" type="RichTextLabel" parent="."]
margin_left = 2.99999
margin_top = 178.0
margin_right = 290.0
margin_bottom = 218.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_constants/line_separation = -1
text = "After narrowly escaping the station, I went into hiding with nothing but my weakened suit, ship, and the creatures that had brought that ship to my rescue during my escape. I was quickly forced to sell much of my equipment at a remote supply station in exchange for food and fuel."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextTriangle" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 160, 230.732 )
frames = SubResource( 6 )
frame = 2
playing = true

[node name="Black" type="Sprite" parent="."]
position = Vector2( 160, 120 )
scale = Vector2( 20, 15 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/fade from black" = SubResource( 7 )
"anims/fade from white" = SubResource( 8 )
"anims/fade to black" = SubResource( 9 )

[node name="TextSpeed" type="Timer" parent="."]
